# hyprauth

./: .gdb_history  .gitignore  CMakeLists.txt  README.md  flake.nix  hyprauth.pc.in
.github/workflows/: nix.yml
include/hyprauth/: hyprauth.h  hyprauth.hpp
include/hyprauth/core/: Authenticator.hpp  Provider.hpp  SecretBuffer.hpp
nix/: default.nix  overlays.nix
src/: Macros.hpp  hyprauth_c.cpp
src/core/: Authenticator.cpp  Authenticator.hpp  SecretBuffer.cpp
src/core/fprint/: FprintDbus.cpp  FprintDbus.hpp
src/core/pam/: Pam.cpp  Pam.hpp  PamClient.cpp  PamClient.hpp  hyprauth-pam-v1.xml
src/helpers/: Env.cpp  Env.hpp  Memory.hpp  SendRecv.cpp  SendRecv.hpp
tests/: cliauth.c  cliauth.cpp
tests/unit/: SecretBuffer.cpp  SendRecv.cpp
